Guile-GnuTLS NEWS                                    -*- outline -*-

* Noteworthy changes in release ?.? (????-??-??) [?]


* Noteworthy changes in release 4.0.0 (2023-08-24) [stable]

** Fix automake warnings.

** Indent Guile code.

** Work around GnuTLS 3.8.1 bug wrt missing GNUTLS_NO_EXTENSIONS.

** Changed encoding of source files from ISO-8859-1 to UTF-8.

* Noteworthy changes in release 3.7.14 (2023-07-22) [beta]

** Fix AEAD self-test failure on macOS.

** Bind gnutls_record_get_direction.

* Noteworthy changes in release 3.7.13 (2023-07-18) [beta]

** Bind the AEAD authentication-encryption API and the low-level cipher API.

** Bind a substantial part of the (abstract) public key cryptography API.

** Bind the pseudo-random number generator.

** Bind a bunch of X.509 functions.

** Fix cross-building.

** Add guix.scm for Guix building.

* Noteworthy changes in release 3.7.12 (2023-05-08) [stable]

** The gnutls-guile library can now use newer gnutls features.
It is possible to use newer GnuTLS features, such as new algorithms
and new functions, without sacrificing compatibility with older GnuTLS
implementations. The enumeration values that are not available for the
GnuTLS you build gnutls-guile against will simply be undefined. You
can check whether a function is available with `(defined? 'hmac-copy)`
(here for hmac-copy).

** Bind the HMAC and hash functions from GnuTLS.

** Correctly handle blocking writes to session record ports

* Noteworthy changes in release 3.7.11 (2022-12-07) [stable]

** Build fixes related to git-version-gen.  Fixes: #9.
It is now possible to run 'autoreconf' from within a tarball.

* Noteworthy changes in release 3.7.10 (2022-11-10) [stable]

** Gnulib is used to improve code-reuse and maintainability.
Closes: #1.

** Build fixes wrt static libraries and GNUTLS_CFLAGS.

* Noteworthy changes in release 3.7.9 (2022-10-14) [stable]

** Extracted into a separate project, based on GnuTLS 3.7.8.